--- a/www/intex.html
+++ b/www/intex.html
@@ -19,8 +19,7 @@
         type="text/javascript"></script>
 
     <!-- Texllate  -->
-    <link rel="stylesheet" href="assets/vendore/texllate/animate.css">
-
+    <link rel="stylesheet" href="assets/vendor/texllate/animate.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -367,16 +366,17 @@
     <script src="https://unpkg.com/siriwave/dist/siriwave.umd.min.js"></script>
 
     <!-- Texllate js -->
-    <script src="assets/vendore/texllate/jquery.fittext.js"></script>
-    <script src="assets/vendore/texllate/jquery.lettering.js"></script>
+    <script src="assets/vendor/texllate/jquery.fittext.js"></script>
+    <script src="assets/vendor/texllate/jquery.lettering.js"></script>
     <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
 
     <!-- lottie files -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-    <script src="main.js"></script>
-    <script src="controller.js"></script>
-    <script src="/eel.js"></script>
+    <!-- Custom JS files -->
+    <script src="www/main.js"></script>
+    <script src="www/controller.js"></script>
+    <script src="www/eel.js"></script>
 
 
 </body>
