--- a/www/g.html
+++ b/www/g.html
@@ -27,12 +27,12 @@
     <div class="col-md-12 mt-4 pt-4">
         <div class="text-center">
             <div id="TextInput" class="d-flex">
-
-                <input type="text" class="input-field" name="chatbox" id="chatbox"
-                    placeholder="type here ... ">
+                <input type="text" class="input-field" name="chatbox" id="chatbox" placeholder="type here ...">
                 <button id="SendBtn" class="glow-on-hover" hidden><i class="bi bi-send"></i></button>
-                
-
+                <button id="MicBtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
+                <button id="ChatBtn" class="glow-on-hover" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="bi bi-chat-dots"></i></button>
+                <button id="SettingsBtn" class="glow-on-hover"><i class="bi bi-gear"></i></button>
             </div>
         </div>
     </div>
